codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__ultra_accent_upgrades_prompt_glyph.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────╮"
"┃ »                                                        │"
"┃                                                          │"
"┃                                                          │"
"┃                                                          │"
"┃                                                          │"
"┃                                                          │"
"╰──────────────────────────────────────────────────────────╯"
"  ? shortcuts                            100% context left  "
